--- a/res/layout/confirm_dialog.xml
+++ b/res/layout/confirm_dialog.xml
@@ -3,25 +3,50 @@
     android:id="@+id/confirmDialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical"
+    android:padding="10dp" >
+
     <TextView
         android:id="@+id/confirmTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="18sp"
-        android:text="@string/software_update" />
-    
+        android:layout_marginTop="10dp"
+        android:singleLine="true"
+        android:text="@string/software_update"
+        android:textSize="18sp" />
+
     <TextView
         android:id="@+id/confirmContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/update_features" />
-    
-    
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        android:padding="0dp" >
+
+        <Button
+            android:id="@+id/confirmCancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cancel"
+            android:layout_margin="0dp"
+            android:padding="0dp" />
+
+        <Button
+            android:id="@+id/confirmOk"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/ok"
+            android:layout_margin="0dp"
+            android:padding="0dp" />
+        
+    </LinearLayout>
 </LinearLayout>
