--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,5 +16,16 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <!-- Confirm Dialog theme -->
+    <style name="ConfirmDialog" parent="android:Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
+    
+    <style name="ConfirmButton">
+        
+    </style>
 
 </resources>
