--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -1,21 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@android:color/holo_orange_dark" >
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello,World!" />
-    
-    <Switch
-        android:id="@+id/navigationBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:textOn="Hide Navigation Bar"
-        android:textOff="Show Navigation Bar"/>
-    
-</LinearLayout>
+    android:layout_height="match_parent" />
