--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical" >
     
     <ImageView
         android:id="@+id/splashImg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
+        android:src="@drawable/ic_launcher"
         android:contentDescription="@string/image_content" />
     
 </LinearLayout>
