0003 2014/11/10       1、使用ViewPager实现简单新特性介绍       2、新增Back两次退出程序功能       3、将启动画面和新特性介绍合并到一个Acitvity（Splash）中

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -27,19 +27,16 @@
         <item name="android:backgroundDimEnabled">false</item><!-- 模糊 -->
     </style>
 
-    <!-- Activity全屏并可以设置启动和退出动画 -->
-    <style name="Fullscreen" parent="android:Animation.Activity">
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowContentOverlay">@null</item>
+    <style name="ZoomInFromCenter" parent="android:Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/zoom_in_from_center</item>
+        <item name="android:activityOpenExitAnimation">@anim/out_from_left</item>
+        <item name="android:activityCloseEnterAnimation">@null</item>
+        <item name="android:activityCloseExitAnimation">@null</item>
     </style>
     
-    <!-- Splash主题继承自Fullscreen -->
-    <style name="Fullscreen.Splash">
-    </style>
-    
-    <!-- Feature主题继承自Fullscreen -->
-    <style name="Fullscreen.Feature">
+    <!-- Splash全屏并可以设置启动和退出动画 -->
+    <style name="Splash" parent="android:Theme.NoTitleBar.Fullscreen">
+        <item name="android:windowAnimationStyle">@style/ZoomInFromCenter</item>
     </style>
     
 </resources>
