--- a/res/anim/out_from_left.xml
+++ b/res/anim/out_from_left.xml
@@ -4,4 +4,5 @@
     android:toXDelta="-100%p"
     android:fromYDelta="0"
     android:toYDelta="0"
-    android:duration="500" />
+    android:duration="500"
+    android:fillAfter="true" />
