--- a/res/layout/feature_1.xml
+++ b/res/layout/feature_1.xml
@@ -3,11 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ff0000" >
+    android:gravity="center"
+    android:background="#FF5722" >
     
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/update_features" />
+        android:textSize="30sp"
+        android:textColor="#FFFFFF"
+        android:text="@string/feature_demo_1" />
 
 </LinearLayout>
