--- a/res/layout/feature_3.xml
+++ b/res/layout/feature_3.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--  -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#0000ff" >
+    android:gravity="center"
+    android:background="#2196F3" >
     
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/update_features" />
+        android:textSize="30sp"
+        android:textColor="#FFFFFF"
+        android:text="@string/feature_demo_3" />
 
 </LinearLayout>
