--- a/res/anim/out_from_right.xml
+++ b/res/anim/out_from_right.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="300"
+    android:fillAfter="true"
     android:fromXDelta="0"
-    android:toXDelta="100%p"
     android:fromYDelta="0"
-    android:toYDelta="0"
-    android:duration="500" />
+    android:toXDelta="100%p"
+    android:toYDelta="0" />
