--- a/res/drawable/circle_dot_activited.xml
+++ b/res/drawable/circle_dot_activited.xml
@@ -3,7 +3,7 @@
     android:shape="oval" >
     
     <solid 
-        android:color="#E0E0E0" />
+        android:color="#BAE0E0E0" />
     
     <size
         android:width="10dp"
