--- a/res/drawable/circle_dot_normal.xml
+++ b/res/drawable/circle_dot_normal.xml
@@ -3,14 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval" >
     
-    <solid android:color="#9E9E9E" />
+    <solid android:color="#BA9E9E9E" />
     
     <size
         android:width="10dp"
         android:height="10dp" />
     
-    <gradient 
-        android:startColor="#FFFF0000" 
-        android:endColor="#80FF00FF"
-        android:angle="270" />
 </shape>
