--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -3,8 +3,14 @@
     <!--
         Base application theme for API 11+. This theme completely replaces
         AppBaseTheme from res/values/styles.xml on API 11+ devices.
+        暗色主题，适合夜间使用
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Holo">
+        <!-- API 11 theme customizations can go here. -->
+    </style>
+    
+    <!-- 亮色主题，适合白天使用 -->
+    <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light">
         <!-- API 11 theme customizations can go here. -->
     </style>
 
