--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -4,9 +4,15 @@
         Base application theme for API 14+. This theme completely replaces
         AppBaseTheme from BOTH res/values/styles.xml and
         res/values-v11/styles.xml on API 14+ devices.
+        暗色主题，适合夜间使用
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppBaseTheme" parent="android:Theme.Holo">
         <!-- API 14 theme customizations can go here. -->
+    </style>
+    
+    <!-- 亮色主题，适合白天使用 -->
+    <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light">
+        <!-- API 11 theme customizations can go here. -->
     </style>
 
 </resources>
