--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -1,17 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--
-        Base application theme for API 11+. This theme completely replaces
-        AppBaseTheme from res/values/styles.xml on API 11+ devices.
-        暗色主题，适合夜间使用
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo">
-        <!-- API 11 theme customizations can go here. -->
+    <!-- 暗色主题，适合夜间使用(Android3.0+) -->
+    <style name="AppTheme" parent="android:Theme.Holo">
+        <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
     </style>
     
     <!-- 亮色主题，适合白天使用 -->
-    <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light">
-        <!-- API 11 theme customizations can go here. -->
+    <style name="AppThemeLight" parent="android:Theme.Holo.Light">
+        <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
     </style>
-
+    
 </resources>
