--- a/res/values-v19/styles.xml
+++ b/res/values-v19/styles.xml
@@ -1,30 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <!--
-        Base application theme for API 19+. This theme completely replaces
-        AppBaseTheme from res/values/styles.xml, res/values-v11/styles.xml and
-        res/values-v14/styles.xml.
-        暗色主题，适合夜间使用
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo">
-        <!-- API 19 theme customizations can go here. -->
-    </style>
-    
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- API 19 theme customizations can go here. -->
+    <!-- 暗色主题，适合夜间使用(Android4.4+) -->
+    <style name="AppTheme" parent="android:Theme.Holo">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
     </style>
     
     <!-- 亮色主题，适合白天使用 -->
-    <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light">
-        <!-- API 19 theme customizations can go here. -->
-    </style>
-    
-    <style name="AppThemeLight" parent="AppBaseThemeLight">
-        <!-- API 19 theme customizations can go here. -->
+    <style name="AppThemeLight" parent="android:Theme.Holo.Light">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
