#v0.0.1_b099 c010 2014/11/25       1、新增Google Admob，但尚未完全成功       2、新增Youmi Ads，但尚未测试成功

--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -9,4 +9,7 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name" />
     
+    <!-- Google admob -->
+    <!-- <include layout="@layout/admob_banner"/> -->
+    
 </LinearLayout>
