--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -7,4 +7,9 @@
     <string name="key_install_stamp">APP_INSTALL_STAMP</string>
     <string name="key_use_count">APP_USE_COUNT</string>
     
+    <string name="admob_unit_id">pub-9439716523405765</string>
+    <string name="admob_test_device">F409968388311AB2806E8E280CE38D47</string>
+    
+    <string name="youmi_pub_id">48ca1f69992df596</string>
+    <string name="youmi_ads_key">f8ae9444a6e560a7</string>
 </resources>
